--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--header section-->
-    <header class="heder">
+    <!-- <header class="heder">
       <div class="container heder-flex">
         <nav class="heder-nav">
           <a class="heder-logo link" href="./index.html"
@@ -54,20 +54,20 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <!--hero section-->
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="nero-title">Effective Solutions for Your Business</h1>
           <button class="nero-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!--feature menu-->
-      <section class="feature">
+      <!-- <section class="feature">
         <div class="container">
           <h2 hidden class="feature-title">Our Methodology</h2>
           <ul class="feature-lisk list">
@@ -121,10 +121,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--blok photo-->
-      <section class="blok-photo">
+      <!-- <section class="blok-photo">
         <div class="container">
           <h2 class="blok-photo-title">What are we doing</h2>
           <ul class="blok-photo-lisk list">
@@ -157,7 +157,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--team section-->
       <section class="team-section">
@@ -436,7 +436,7 @@
         </div>
       </section>
       <!--Customers-->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="customers-container container">
           <h2 class="customers-title">Customers</h2>
 
@@ -521,10 +521,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-list">
         <div class="footer-cont-logo">
           <a class="footer-logo link" href="./index.html"
@@ -614,9 +614,9 @@
           </div>
         </form>
       </div>
-    </footer>
+    </footer> -->
     <!--modal window-->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -694,6 +694,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
