--- a/portfolio.html
+++ b/portfolio.html
@@ -302,8 +302,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-3.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -378,8 +378,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-4.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -454,8 +454,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-5.jpg"
                       alt="banking application interface"
-                     width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -530,8 +530,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-6.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -606,8 +606,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-7.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -682,8 +682,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-8.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -758,8 +758,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-9.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
