--- a/portfolio.html
+++ b/portfolio.html
@@ -148,8 +148,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-1.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
@@ -226,8 +226,8 @@
                       class="gallery-item-img"
                       src="./images/portfolio/dex-@1x-2.jpg"
                       alt="banking application interface"
-                      width="360"
-                      height="300"
+                      min-width="360"
+                      min-height="300"
                     />
                   </picture>
 
